@@ -2,6 +2,17 @@
 
 This document contains a list of changes for each release of Krang.
 
+=head2 3.17 - In Development
+
+=over
+
+=item *
+
+Updated C<Krang.Window.log_out()> so that it updates other logged in
+windows or tabs to reflect that the user has logged out. [Brad Oaks]
+
+=back
+
 =head2 3.16 - December, 21 2011
 
 =over
